generator client {
    provider = "prisma-client-js"
}

datasource db {
    provider = "postgresql"
    url      = env("DATABASE_URL")
}

enum ListingStatus {
    AVAILABLE
    RESERVED
    WAITING_FOR_PAYMENT
    PAID
    WAITING_FOR_PICKUP
    SENT
    RECEIVED
    RATED
    SOLD
}

enum ListingCondition {
    NEW
    LIKE_NEW
    GOOD
    FAIR
    POOR
}

model User {
    id            String         @id @default(cuid())
    studentId     String?        @unique
    email         String         @unique
    displayName   String
    avatarUrl     String?
    lineId        String?
    instagram     String?
    facebookUrl   String?
    passwordHash  String
    createdAt     DateTime       @default(now())
    updatedAt     DateTime       @updatedAt
    listings      Listing[]      @relation("SellerListings")
    buyerListings Listing[]      @relation("BuyerListings")
    refreshTokens RefreshToken[]
    reviewsWritten Review[]       @relation("ReviewerReviews")
    reviewsReceived Review[]      @relation("SellerReviews")
    carts         Cart[]
}

model Category {
    id        String    @id @default(cuid())
    name      String
    slug      String    @unique
    createdAt DateTime  @default(now())
    updatedAt DateTime  @updatedAt
    listings  Listing[]
}

model PickupLocation {
    id          String    @id @default(cuid())
    name        String
    building    String
    description String?
    createdAt   DateTime  @default(now())
    updatedAt   DateTime  @updatedAt
    listings    Listing[]
}

model Listing {
    id               String           @id @default(cuid())
    sellerId         String
    buyerId          String?
    title            String
    description      String
    price            Int
    isFree           Boolean          @default(false)
    status           ListingStatus    @default(AVAILABLE)
    condition        ListingCondition @default(GOOD)
    courseCode       String?
    categoryId       String?
    pickupLocationId String?
    images           String[]
    createdAt        DateTime         @default(now())
    updatedAt        DateTime         @updatedAt
    seller           User             @relation("SellerListings", fields: [sellerId], references: [id], onDelete: Cascade)
    buyer            User?            @relation("BuyerListings", fields: [buyerId], references: [id], onDelete: SetNull)
    category         Category?        @relation(fields: [categoryId], references: [id], onDelete: SetNull)
    pickupLocation   PickupLocation?  @relation(fields: [pickupLocationId], references: [id], onDelete: SetNull)
    reviews          Review[]
    cartItems        CartItem[]

    @@index([sellerId])
    @@index([buyerId])
    @@index([status])
    @@index([courseCode])
}

model RefreshToken {
    id        String   @id @default(cuid())
    token     String   @unique
    userId    String
    expiresAt DateTime
    createdAt DateTime @default(now())
    user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

    @@index([userId])
}

model Cart {
    id        String     @id @default(cuid())
    userId    String
    createdAt DateTime   @default(now())
    updatedAt DateTime   @updatedAt
    user      User       @relation(fields: [userId], references: [id], onDelete: Cascade)
    items     CartItem[]

    @@unique([userId])
}

model CartItem {
    id        String   @id @default(cuid())
    cartId    String
    listingId String
    quantity  Int      @default(1)
    createdAt DateTime @default(now())
    updatedAt DateTime @updatedAt
    cart      Cart     @relation(fields: [cartId], references: [id], onDelete: Cascade)
    listing   Listing  @relation(fields: [listingId], references: [id], onDelete: Cascade)

    @@unique([cartId, listingId])
    @@index([listingId])
}

model Review {
    id         String   @id @default(cuid())
    listingId  String
    sellerId   String
    reviewerId String
    rating     Int
    comment    String?
    createdAt  DateTime @default(now())
    updatedAt  DateTime @updatedAt
    listing    Listing  @relation(fields: [listingId], references: [id], onDelete: Cascade)
    seller     User     @relation("SellerReviews", fields: [sellerId], references: [id], onDelete: Cascade)
    reviewer   User     @relation("ReviewerReviews", fields: [reviewerId], references: [id], onDelete: Cascade)

    @@unique([listingId, reviewerId])
    @@index([sellerId])
}
